Bug fixes - Timezone and word wrap

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -184,7 +184,7 @@ body,
             display: inline-block;
             position: relative;
             min-width: 35px;
-            word-break: break-all;
+            text-align: left;
           }
 
           .other-message {
